<resources>
    <string name="app_name">FindParking</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_phone_number">Phone number</string>
    <string name="prompt_birthday">Date of birth</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Create an account!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcomeMsg">Find a parking suited for you!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="birthday">Date of birth</string>
    <string name="dateOfReservation">Date of reservation</string>
    <string name="From">From:</string>
    <string name="To">To:</string>
    <string name="confirmationText">Your have successfully made a reservation!</string>
    <string name="thanks">Thank you for using Find Parking</string>
    <string name="greatDay">Have a great day</string>
    <string name="ReservationMade">Reservation made for:</string>
    <string name="dummyName">Skopje Parking, Skopje</string>
    <string name="Navigate">Navigate</string>
    <string name="Delete">Delete</string>
    <string name="myreservations">My Reservations</string>
    <string name="ViewReservation">View</string>
    <string name="AppName">Find Parking</string>

    <array name="timeSlots">
        <item>00:00-01:00</item>
        <item>01:00-02:00</item>
        <item>02:00-03:00</item>
        <item>03:00-04:00</item>
        <item>04:00-05:00</item>
        <item>05:00-06:00</item>
        <item>06:00-07:00</item>
        <item>07:00-08:00</item>
        <item>08:00-09:00</item>
        <item>09:00-10:00</item>
        <item>10:00-11:00</item>
        <item>11:00-12:00</item>
        <item>12:00-13:00</item>
        <item>13:00-14:00</item>
        <item>14:00-15:00</item>
        <item>15:00-16:00</item>
        <item>16:00-17:00</item>
        <item>17:00-18:00</item>
        <item>18:00-19:00</item>
        <item>19:00-20:00</item>
        <item>20:00-21:00</item>
        <item>21:00-22:00</item>
        <item>22:00-23:00</item>
        <item>23:00-24:00</item>
    </array>

</resources>