<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    >


    <TextView
        android:id="@+id/ReservationNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Reservation 1"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/ReservationMade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReservationNumber" />

    <TextView
        android:id="@+id/myReservationsCityAndParkingName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/dummyName"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/ReservationNumber"

        />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="On: "
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/myReservationsDateForReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="30/12/20"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" between "
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/myReservationsDateForReservation"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/myReservationstimeFrameForReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="13:00-14:00"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/ViewReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="15dp"
        android:text="@string/ViewReservation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/myReservationsDeleteReservation"
        app:layout_constraintTop_toBottomOf="@+id/myReservationstimeFrameForReservation" />

    <Button
        android:id="@+id/myReservationsDeleteReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ViewReservation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myReservationsDateForReservation" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:outlineAmbientShadowColor="#ff00cc"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:outlineAmbientShadowColor="#ff00cc"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <View
        android:id="@+id/divider7"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:outlineSpotShadowColor="@android:color/holo_red_dark"
        android:outlineAmbientShadowColor="#ff00cc"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/divider8"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="?android:attr/listDivider"
        android:outlineAmbientShadowColor="#ff00cc"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/QRCodeimageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/ViewReservation"
        app:layout_constraintEnd_toEndOf="@+id/divider8"
        app:layout_constraintStart_toEndOf="@+id/myReservationstimeFrameForReservation"
        app:layout_constraintTop_toBottomOf="@+id/myReservationsCityAndParkingName"  />


</androidx.constraintlayout.widget.ConstraintLayout>